<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imgGridGambar"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@mipmap/ic_launcher"
                android:scaleType="fitXY"/>
            <TextView
                android:id="@+id/textGridRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/_3_5"
                android:textColor="#fff"
                android:textSize="20sp"
                android:padding="3dp"
                android:background="#98cd37"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textGridJudul"
            android:text="@string/sushi_tomi"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textGridAlamat"
            android:text="@string/mountain_view_mountain_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textGridJenisMakanan"
            android:text="@string/sushi_jepang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textGridPerkiraanHarga"
            android:text="@string/_30_untuk_dua_approx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.cardview.widget.CardView>