<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:orientation="vertical">



    <ImageView
        android:id="@+id/imageDetailGambar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher"/>
    <TextView
        android:id="@+id/textDetailRating"
        android:layout_below="@id/imageDetailGambar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:textColor="#fff"
        android:text="@string/_3_5"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:padding="3dp"
        android:background="#98cd37"/>

    <ImageView
        android:layout_below="@+id/textDetailRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="15dp"
        android:paddingTop="15dp"
        android:src="@drawable/ic_call_black_24dp"/>

    <LinearLayout
        android:layout_below="@+id/imageDetailGambar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/textDetailNamaResto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/specialty_s"
        android:textStyle="bold"
        android:textSize="25sp"
        android:padding="10dp"/>
    <TextView
        android:id="@+id/textDetailJenisMakanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kafe_kafe_kue_roti"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textColor="#B6B3B3"/>
    <TextView
        android:id="@+id/textDetailAlamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/_645_ellis_street_mountain_view_94043"/>
    <TextView
        android:id="@+id/textDetailJamBuka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/buka_besok_pada_5_30am"/>
        <View
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:background="#C4C1C1"
            android:layout_marginStart="15dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Direction"
                android:textColor="#3b8641"
                android:padding="15dp"/>
            <TextView
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Menus"
                android:textColor="#3b8641"
                android:padding="15dp"/>
            <TextView
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Ulasan(17)"
                android:textColor="#3b8641"
                android:padding="15dp"/>
            <TextView
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Foto(5)"
                android:textColor="#3b8641"
                android:padding="15dp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:background="#C4C1C1"
            android:layout_marginStart="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:drawableTop="@drawable/ic_bookmark_border_black_24dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/arsip"
                android:textColor="#FF000000"
                android:textAlignment="center"/>
            <TextView
                android:drawableTop="@drawable/ic_check_circle_black_24dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/pernah"
                android:textColor="#FF000000"
                android:textAlignment="center"/>

            <TextView
                android:drawableTop="@drawable/ic_share_black_24dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/bagi"
                android:textColor="#FF000000"
                android:textAlignment="center"/>

            <TextView
                android:drawableTop="@drawable/ic_star_black_24dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/add_review"
                android:textColor="#FF000000"
                android:textAlignment="center"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:background="#C4C1C1"
            android:layout_marginStart="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rate_this_place"
            android:textColor="#3D3C3C"
            android:padding="10dp"
            android:textSize="24sp"/>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:theme="@style/RatingBar"/>
    </LinearLayout>
</RelativeLayout>